refined for better responses and more consistent preview behaviour. persisting issues : -sometimes agent makes changes that were requested on a single competency to multiple ones -still shows all batch competencies when asked for specific updates solution considered : server side : compare what's in the cache vs what's being previewed.